# BytesScreenShare

./: .gitignore  CMakeLists.txt  README.md  main.cpp  shared_screen.cpp  shared_screen.h  shared_screen.ui
Capture/: ScreenCaptureService.cpp  ScreenCaptureService.h
encoder/: VideoEncoder.cpp  VideoEncoder.h
example/p2p-client/: main.cpp
example/signaling-client/: CMakeLists.txt  TestClient.hpp  TestClient.ui  main.cpp
network/: RtcRtpSender.cpp  RtcRtpSender.h
signaling-server/: CMakeLists.txt  README.md
signaling-server/doc/: SignalingMessage.md
signaling-server/src/: BlockingQueue.hpp  Common.hpp  SignalingServer.cpp  SignalingServer.h  Test.hpp  Widget.cpp  Widget.h  Widget.ui  Worker.cpp  Worker.h  copy.bat  main.cpp
src/: ffmpeg_test.cpp  main.cpp  shared_screen.cpp  shared_screen.h  shared_screen.ui
src/Capture/: ScreenCaptureService.cpp  ScreenCaptureService.h
src/encoder/: VideoEncoder.cpp  VideoEncoder.h
src/icons/: icons.qrc
src/rtc/: PeerConnectionManager.cpp  PeerConnectionManager.hpp
src/signaling/: WsSignalingClient.cpp  WsSignalingClient.hpp
src/ui/: shared_screen.cpp  shared_screen.h  shared_screen.ui
third_part/lib/cmake/LibDataChannel/: LibDataChannelTargets-debug.cmake  LibDataChannelTargets.cmake
third_part/libdatachannel/lib/cmake/LibDataChannel/: LibDataChannelConfigVersion.cmake
